--- a/Phase 1/simply-blogging/blog.html
+++ b/Phase 1/simply-blogging/blog.html
@@ -93,7 +93,7 @@
         </div>
     </div>
 
-    <footer class="footer bg-light" style="text-align: center; bottom: 0; width: 100%; position: absolute; padding: 10px;">
+    <footer class="footer bg-light" style="text-align: center; bottom: 0; width: 100%; padding: 10px;">
         <button type="button" class="btn btn-secondary" onclick="clearBlogs()">Clear All Blogs!</button>
     </footer>
 
